[package]
name = "rustboy"
version = "0.1.0"
edition = "2021"
authors = [
    "Matheus T. dos Santos <matheuswhite1@protonmail.com>",
    "José Gomes da Silva Junior <jgsj@ic.ufal.br>",
    "Paulo Roberto Mendes dos Santos  <pauloxrms@gmail.com>",
    "Victor Alexandre da Rocha Monteiro Miranda <victoralexandre499@gmail.com>"
]

[lib]
name = "rustboy"
path = "src/lib.rs"

[[bin]]
name = "rustboy"
path = "src/bin.rs"

[dependencies]
